--- a/client/src/pages/css/Login.module.css
+++ b/client/src/pages/css/Login.module.css
@@ -5,8 +5,8 @@ body {
 
 body {
   align-items: center;
-  padding-top: 40px;
-  padding-bottom: 40px;
+  /* padding-top: 40px;
+  padding-bottom: 40px; */
   background-color: #F5F5F5;
 }
 
