--- a/client/src/components/spinner/Spinner.module.css
+++ b/client/src/components/spinner/Spinner.module.css
@@ -9,8 +9,9 @@
   margin-left: -30px;
 	border-radius: 50%;
 	border: 5px solid lightgray;
-	border-top-color: #59DA50;
-	animation: spinner 0.7s ease infinite;
+	border-top-color: #41AF39;
+  border-bottom-color: #41AF39;
+	animation: spinner 0.7s ease-in-out infinite;
 }
 
 @keyframes spinner {
