--- a/client/src/index.css
+++ b/client/src/index.css
@@ -16,14 +16,11 @@ code {
   color: red;
 }
 
-.tc {
-  text-align: center !important;
-}
+.tc { text-align: center !important; }
+.tl { text-align: left !important; }
+.tr { text-align: right !important; }
 
-.tl {
-  text-align: left !important;
-}
+.fl { float: left !important; }
+.fr { float: right !important; }
 
-.tr {
-  text-align: right !important;
-}
+.color-gray { color: gray; }
