--- a/client/src/index.css
+++ b/client/src/index.css
@@ -10,7 +10,9 @@
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-}
+} */
+
+.swal2-container { z-index: 9999 !important; }
 
 .red_ico:after {
   content: '*';
@@ -24,4 +26,4 @@ code {
 .fl { float: left !important; }
 .fr { float: right !important; }
 
-.color-gray { color: gray; } */
+.color-gray { color: gray; }
