--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,7 +12,7 @@ code {
     monospace;
 } */
 
-.swal2-container { z-index: 9999 !important; }
+/* .swal2-container { z-index: 9999 !important; } */
 
 .red_ico:after {
   content: '*';
