221116|Update note alert

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -26,6 +26,7 @@ code {
 .fl { float: left !important; }
 .fr { float: right !important; }
 
-.fs12 { font-size: 14px;}
+.fs12 { font-size: 12px;}
 
 .color-gray { color: gray; }
+.color-red { color: red; }
